adjusted overflow-x (hidden) on html to fix whitespace appearing on mobile version

--- a/styles/style-prefixed.css
+++ b/styles/style-prefixed.css
@@ -10,7 +10,7 @@
             box-sizing: border-box;
     margin: 0;
     padding: 0;
-    /* overflow-x: hidden; */
+    
   }
   
   @-webkit-keyframes move-left-right {
@@ -115,6 +115,7 @@
     margin: 0;
     /* background-color:#171941; */
     background-color: #141740;
+    overflow-x: hidden;
   }
   
   #code-graphic {
